modified:   src/app/app.component.html 	modified:   src/app/app.module.ts   new file:   src/app/dbz/agregar/agregar.component.css 	new file:   src/app/dbz/agregar/agregar.component.html 	new file:   src/app/dbz/agregar/agregar.component.ts 	new file:   src/app/dbz/dbz.module.ts 	new file:   src/app/dbz/interfaces/dbz.interface.ts 	new file:   src/app/dbz/main-page/main-page.component.css 	new file:   src/app/dbz/main-page/main-page.component.html   new file:   src/app/dbz/main-page/main-page.component.ts 	new file:   src/app/dbz/personajes/personajes.component.html 	new file:   src/app/dbz/personajes/personajes.component.ts 	new file:   src/app/dbz/services/dbz.service.ts 	modified:   src/styles.css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--<app-heroe></app-heroe>-->
 
-<app-contador></app-contador>
+<!--<app-contador></app-contador>-->
 <!--<app-listado></app-listado>-->
+<app-main-page></app-main-page>
